--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ca97">  <td>21/01/20 21:18:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod()[pri:0, instance:Tiki.TikiTest@51f116b8]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@375457936</td>   <td></td> </tr>
-<tr bgcolor="806aaa">  <td>21/01/20 21:18:54</td>   <td>5510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TikiTest.TC_TK01()[pri:0, instance:Tiki.TikiTest@51f116b8]">TC_TK01</td> 
-  <td>main@375457936</td>   <td></td> </tr>
-<tr bgcolor="f7ca97">  <td>21/01/20 21:19:13</td>   <td>24235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:Tiki.TikiTest@51f116b8]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@375457936</td>   <td></td> </tr>
+<tr bgcolor="da8e68">  <td>21/02/02 00:43:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod()[pri:0, instance:Tiki.Sel2_Tiki_Test@7690781]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1432536094</td>   <td></td> </tr>
+<tr bgcolor="806aaa">  <td>21/02/02 00:43:30</td>   <td>5523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sel2_Tiki_Test.TC_002()[pri:0, instance:Tiki.Sel2_Tiki_Test@7690781]">TC_002</td> 
+  <td>main@1432536094</td>   <td></td> </tr>
+<tr bgcolor="da8e68">  <td>21/02/02 00:43:46</td>   <td>21634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:Tiki.Sel2_Tiki_Test@7690781]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1432536094</td>   <td></td> </tr>
 </table>
